5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1723_2504.log
== TEST (2019-05-11 11:52:49) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = float(input("multiplicacao dos virus: "))
pl = float(input("multiplicacao dos leucocitos: "))
t = 0
while (2*l != v):
	v = v + v*pv/100
	l = l + l*pl/100
	t = t + 1
print(t)
-- OUTPUT:
35165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:54:03) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = float(input("multiplicacao dos virus: "))
pl = float(input("multiplicacao dos leucocitos: "))
t = 0
while (2*l >= v):
	v = v + v*pv/100
	l = l + l*pl/100
	t = t + 1
print(t)
-- OUTPUT:
35165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:54:19) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = float(input("multiplicacao dos virus: "))
pl = float(input("multiplicacao dos leucocitos: "))
t = 0
while (2*l < v):
	v = v + v*pv/100
	l = l + l*pl/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:54:34) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = float(input("multiplicacao dos virus: "))
pl = float(input("multiplicacao dos leucocitos: "))
t = 0
while (2*l < v):
	v = v + v*pv/100
	l = l + l*pl/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:56:04) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = float(input("multiplicacao dos virus: "))
pl = float(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v + v*pv/100
	l = l + l*pl/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 11:57:31) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v + v*pv/100
	l = l + l*pl/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 11:58:22) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v + v*pv/100
	l = l + l*pl/100
	t = t + 1
print(t)
-- EXECUTION TIME:
0.147621
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
7
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
3
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:06:36) 
-- CODE:
vi = int(input("virus: "))
li = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
v = vi
l = li
while not(2*l >= v):
	v = v + vi*pv/100
	l = l + li*pl/100
	t = t + 1
print(t)
-- OUTPUT:
275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:10:28) 
-- CODE:
vi = int(input("virus: "))
li = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
v = vi
l = li
while not(2*l >= v):
	v = v + vi*pv/100
	l = l + li*pl/100
	t = t + 1
print(t)
-- OUTPUT:
275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:16:02) 
-- CODE:
vi = int(input("virus: "))
li = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
v = vi
l = li
while not(2*l >= v):
	v = v + vi*pv/100
	l = l + li*pl/100
	t = t + 1
print(t)
-- EXECUTION TIME:
0.204455
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:17:03) 
-- CODE:
vi = int(input("virus: "))
li = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
v = vi
l = li
while not(2*l >= v):
	v = v + pv
	l = l + lv
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    l = l + lv
NameError: name 'lv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:17:29) 
-- CODE:
vi = int(input("virus: "))
li = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
v = vi
l = li
while not(2*l >= v):
	v = v + pv
	l = l + pl
	t = t + 1
print(t)
-- OUTPUT:
2295
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:20:01) 
-- CODE:
vi = int(input("virus: "))
li = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
v = vi
l = li
while not(2*l >= v):
	v = v + vi*pv/100
	l = l + li*pl/100
	t = t + 1
print(t)
-- EXECUTION TIME:
0.351606
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:20:09) 
-- CODE:
vi = int(input("virus: "))
li = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
v = vi
l = li
while not(2*l >= v):
	v = v + pv*v/100
	l = l + pl*l/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:20:34) 
-- CODE:
vi = int(input("virus: "))
li = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
v = vi
l = li
while not(2*l >= v):
	v = v + pv*vi/100
	l = l + pl*li/100
	t = t + 1
print(t)
-- OUTPUT:
275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:27:01) 
-- CODE:
vi = int(input("virus: "))
li = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
v = vi
l = li
while not(2*l >= v):
	v = v + pv*vi/100
	l = l + pl*li/100
	t = t + 1
print(t)
-- EXECUTION TIME:
0.146203
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
275
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:36:20) 
-- CODE:
vi = int(input("virus: "))
li = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v + pv*v/100
	l = l + pl*l/100
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while not(2*l >= v):
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:36:39) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v + pv*v/100
	l = l + pl*l/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:40:06) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v*pv*v/100
	l = l*pl*l/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:40:22) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v*pv*v/100
	l = l*pl*l/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:41:33) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v+pv*v/100
	l = l+pl*l/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:42:36) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v+pv*v/100
	l = l+pl*l/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:46:14) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v+pv*v/100
	l = l+pl*l/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:46:56) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v+pv*v/100
	l = l+pl*l/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:47:11) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v+pv*v/100
	l = l+pl*l/100
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:50:19) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*l >= v):
	v = v*(1+(pv/100)) 
	l = l*(1+(pl/100)) 
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:56:29) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while not(2*v >= l):
	v = v*(1+(pv/100)) 
	l = l*(1+(pl/100)) 
	t = t + 1
print(t)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:56:52) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while (2*v >= l):
	v = v*(1+(pv/100)) 
	l = l*(1+(pl/100)) 
	t = t + 1
print(t)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:57:09) 
-- CODE:
v = int(input("virus: "))
l = int(input("leucocitos: "))
pv = int(input("multiplicacao dos virus: "))
pl = int(input("multiplicacao dos leucocitos: "))
t = 0
while (2*v >= l):
	v = v*(1+(pv/100)) 
	l = l*(1+(pl/100)) 
	t = t + 1
print(t)
-- EXECUTION TIME:
0.124457
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
